==> igormiktor/CARRTv3/source/pico/test/BNORaw/bno055_support.c <==
#include "pico/stdlib.h"
#include "hardware/i2c.h"
#include "BNO055/bno055.h"
#define BNO055_I2C_BUS_WRITE_ARRAY_INDEX ((u8)1)

s8 BNO055_I2C_bus_write(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
/*    s32 BNO055_iERROR = BNO055_INIT_VALUE;  */
    u8 array[I2C_BUFFER_LEN];
    u8 stringpos = BNO055_INIT_VALUE;



    array[BNO055_INIT_VALUE] = reg_addr;
    for (stringpos = BNO055_INIT_VALUE; stringpos < cnt; stringpos++)
    {
        array[stringpos + BNO055_I2C_BUS_WRITE_ARRAY_INDEX] = *(reg_data + stringpos);
    }

    
    int ret = i2c_write_blocking( MY_I2C_PORT, dev_addr, array, ( cnt+1 ), false );

    if ( ret == cnt+1 )
    {
        return BNO055_SUCCESS;
    }
    else
    {
        return -1;
    }

/*
 * Please take the below APIs as your reference for
 * write the data using I2C communication
 * "BNO055_iERROR = I2C_WRITE_STRING(DEV_ADDR, ARRAY, CNT+1)"
 * add your I2C write APIs here
 * BNO055_iERROR is an return value of I2C read API
 * Please select your valid return value
 * In the driver BNO055_SUCCESS defined as 0
 * and FAILURE defined as -1
 * Note :
 * This is a full duplex operation,
 * The first read data is discarded, for that extra write operation
 * have to be initiated. For that cnt+1 operation done
 * in the I2C write string function
 * For more information please refer data sheet SPI communication:
 */
}

s8 BNO055_I2C_bus_read(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
/*    s32 BNO055_iERROR = BNO055_INIT_VALUE;    */
    u8 array[I2C_BUFFER_LEN] = { BNO055_INIT_VALUE };
    u8 stringpos = BNO055_INIT_VALUE;

    array[BNO055_INIT_VALUE] = reg_addr;

    /* Please take the below API as your reference
     * for read the data using I2C communication
     * add your I2C read API here.
     * "BNO055_iERROR = I2C_WRITE_READ_STRING(DEV_ADDR,
     * ARRAY, ARRAY, 1, CNT)"
     * BNO055_iERROR is an return value of SPI write API
     * Please select your valid return value
     * In the driver BNO055_SUCCESS defined as 0
     * and FAILURE defined as -1
     */
    for (stringpos = BNO055_INIT_VALUE; stringpos < cnt; stringpos++)
    {
        *(reg_data + stringpos) = array[stringpos];
    }


    // Write the register address without a STOP...
    int ret = i2c_write_blocking( MY_I2C_PORT, dev_addr, &reg_addr, 1, true );
    if ( ret == 1 )
    {
        // Then read the data...
        ret = i2c_read_blocking( MY_I2C_PORT, dev_addr, reg_data, cnt, false );
        if ( ret == cnt )
        {
            ret = 0;
        }
    }

    if ( ret )
    {
        return -1;
    }
    else
    {
        return BNO055_SUCCESS;
    }

}
