==> julencasazk/imu_microros/components/bno055/bno055_support.c <==
#include "bno055.h"
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/i2c.h"
#include "esp_err.h"
#include "esp_log.h"
#define BNO055_I2C_BUS_WRITE_ARRAY_INDEX ((u8)1)

s8 BNO055_I2C_bus_write(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
    // TODO Sanity and size checks
   uint8_t complete_buff[1 + cnt];
   complete_buff[0] = reg_addr;
   memcpy(&complete_buff[1], reg_data, cnt);

   esp_err_t err = i2c_master_write_to_device(s_i2c_port, dev_addr, complete_buff, cnt + 1, pdMS_TO_TICKS(1000));
   return (err == ESP_OK) ? (s8)BNO055_SUCCESS : (s8)BNO055_ERROR;

}

s8 BNO055_I2C_bus_read(u8 dev_addr, u8 reg_addr, u8 *reg_data, u8 cnt)
{
    esp_err_t err = i2c_master_write_read_device(s_i2c_port, dev_addr, &reg_addr, 1, reg_data, cnt, pdMS_TO_TICKS(1000));
    return (err == ESP_OK) ? (u8)BNO055_SUCCESS : (u8)BNO055_ERROR;
}
